test/domains/johnk/capacityBadDomain.good
capacityBadDomain.chpl:3: error: domain.requestCapacity only applies to associative domains
