test/domains/johnk/capacityBadDomain.chpl
var D = {1..10}; 

D.requestCapacity(400);
